--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   ],
   "require": {
     "php": ">=5.5.9",
-    "illuminate/support": "~5.0",
+    "illuminate/support": "~5.1|~6.0",
     "tucker-eric/docusign-rest-client": "^2.0"
   },
   "autoload": {
