--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "LaravelDocusign\\LeverPhpServiceProvider"
+        "LaravelDocusign\\DocusignServiceProvider"
       ],
       "aliases": {
         "DocuSign": "LaravelDocusign\\Facade\\DocuSign"
