--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "tucker-eric/laravel-docusign",
-  "description": "Laravel 5 Wrapper for Official DocuSign Rest API",
+  "description": "Laravel 6 Wrapper for Official DocuSign Rest API",
   "keywords": [
     "laravel",
     "docusign",
@@ -14,8 +14,8 @@
     }
   ],
   "require": {
-    "php": ">=5.5.9",
-    "illuminate/support": "~5.1|~6.0|~7.0",
+    "php": ">=7.2",
+    "illuminate/support": "~6.0|~7.0",
     "tucker-eric/docusign-rest-client": "~2.0|~3.0"
   },
   "autoload": {
