fix: composer package discovery missing an s

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "LaravelDocusign\\DocusignServiceProvider"
       ],
       "aliases": {
-        "DocuSign": "LaravelDocusign\\Facade\\DocuSign"
+        "DocuSign": "LaravelDocusign\\Facades\\DocuSign"
       }
     }
   },
