--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   ],
   "require": {
     "php": ">=7.2",
-    "illuminate/support": "~6.0|~7.0",
+    "illuminate/support": "~6.0|~7.0|~8.0",
     "tucker-eric/docusign-rest-client": "~2.0|~3.0"
   },
   "autoload": {
