--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   "require": {
     "php": ">=7.2",
     "illuminate/support": "~6.0|~7.0|~8.0",
-    "tucker-eric/docusign-rest-client": "~2.0|~3.0"
+    "tucker-eric/docusign-rest-client": "~2.0|~3.0|~4.0"
   },
   "autoload": {
     "psr-4": {
