--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   ],
   "require": {
     "php": "^7.3 | ^8.0",
-    "illuminate/support": "~6.0|~7.0|~8.0",
+    "illuminate/support": "~6.0|~7.0|~8.0|~9.0",
     "tucker-eric/docusign-rest-client": "~2.0|~3.0|~4.0|~5.0"
   },
   "autoload": {
